--- a/.env.example
+++ b/.env.example
@@ -44,3 +44,10 @@ PUSHER_APP_CLUSTER=mt1
 
 MIX_PUSHER_APP_KEY="${PUSHER_APP_KEY}"
 MIX_PUSHER_APP_CLUSTER="${PUSHER_APP_CLUSTER}"
+
+
+CASHIER_MODEL=App\User
+STRIPE_KEY=
+STRIPE_SECRET=
+CASHIER_CURRENCY=eur
+CASHIER_LOGGER=stack
